--- a/example2/requirements.txt
+++ b/example2/requirements.txt
@@ -14,6 +14,7 @@ Flask-SQLAlchemy==2.0
 Flask-User==0.6.3
 Flask-WTF==0.12
 Flask-Script==2.0.5
+Flask-Login==0.2.11
 
 # Development tools
 pytest==2.7.2
