完成文章的增删改查和基本排版

--- a/blog/.gitignore
+++ b/blog/.gitignore
@@ -1,3 +1,15 @@
+# Created by .ignore support plugin (hsz.mobi)
+### VirtualEnv template
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,7 +20,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-venv/*
 env/
 build/
 develop-eggs/
@@ -44,28 +55,13 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *,cover
-.hypothesis/
 
 # Translations
 *.mo
 *.pot
-.idea/*
-example2/.idea/*
-example2/emp-venv/*
-.DS_Store
-example/basic_app.sqlite
-example2/example2.sqlite
 
 # Django stuff:
 *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
@@ -73,31 +69,9 @@ docs/_build/
 # PyBuilder
 target/
 
-# IPython Notebook
-.ipynb_checkpoints
+#sql
+data/
 
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
-
-# virtualenv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
-
-example2/.idea/
-example2/app/.idea/
-
-pro/.idea/
-pro/app.sqlite
+tox.ini
+.idea
 
